--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel="icon" type="image/jpg" href="assets/favicon/favicon-16.jpg"/>
     <link rel="apple-touch-icon" href="assets/favicon/favicon-512.jpg" />
     <link rel="apple-touch-startup-image" href="assets/favicon/favicon-512.jpg" />
 
